<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:orientation="vertical"
    android:padding="@dimen/box_inset_layout_padding"
    tools:context=".Ciudades"
    tools:deviceIds="wear">


    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:text="@string/texto_bienvenida"
        android:textColor="@color/colorTextPrimary" />

    <Button
        android:id="@+id/btnMexico"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="2dp"
        android:text="@string/texto_boton_mexico"
        android:textColor="@color/purple_200" />

    <Button
        android:id="@+id/btnBerlin"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="2sp"
        android:text="@string/texto_boton_berlin"
        android:textColor="@color/purple_200" />

    <Button
        android:id="@+id/btnShanghai"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="2sp"
        android:text="@string/texto_boton_shangai"
        android:textColor="@color/purple_200" />
</LinearLayout>